--- a/angular.json
+++ b/angular.json
@@ -17,19 +17,42 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-themes",
+            "extractCss": true,
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              {
+                "input": "src/styles.scss",
+                "bundleName": "main-styles"
+              },
+              {
+                "inject": false,
+                "input": "src/themes/theme-1.scss",
+                "bundleName": "theme-1"
+              },
+              {
+                "inject": false,
+                "input": "src/themes/theme-2.scss",
+                "bundleName": "theme-2"
+              },
+              {
+                "inject": false,
+                "input": "src/themes/theme-3.scss",
+                "bundleName": "theme-3"
+              },
+              {
+                "inject": false,
+                "input": "src/themes/theme-4.scss",
+                "bundleName": "theme-4"
+              }
             ],
             "scripts": []
           },
@@ -43,7 +66,7 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true,
               "extractCss": true,
               "namedChunks": false,
               "aot": true,
