--- a/angular.json
+++ b/angular.json
@@ -152,6 +152,10 @@
               "devServerTarget": "angular-themes:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
