--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.4",
     "angular-cli-ghpages": "^0.6.2",
     "hammerjs": "^2.0.8",
+    "material-theme-creator": "^2.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
